name:                Map
version:             0.1.0.0
synopsis:            Basic Ordered Map Implementation
description:         Basic Ordered Map Implementation
homepage:            https://github.com/jtfell/haskell-Map#readme
license:             BSD3
license-file:        LICENSE
author:              Julian Fell
maintainer:          Julian Fell
copyright:           2017 Julian Fell
category:            Datastructures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Map
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite Map-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Map
                     , QuickCheck
                     , generic-random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jtfell/haskell-Map
